tests/src/frontend/typechecking/invalid/mutable_class_object_2.sk
mutable class Foo<T>(mutable v: T)

fun no(x: Foo<String>): void {
  _ = class(x)(42)
}
